# nonlocality

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.c  client.h  conn_vector.c  generate_version.sh  nonlocality.c  nonlocality.h  server.c  server.h  version.h
